[package]
name = "tauri-plugin-vnidrop-fs"
version = "0.1.0"
authors = [ "Vnidrop" ]
description = "A Tauri plugin to handle fs operations on Android"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-vnidrop-fs"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }
